# embassy-playground

./: Cargo.toml  Embed.toml  README.md  flash_softdevice.sh  memory.x
.cargo/: config
src/: lib.rs  snippets_voltage_regulator.rs
