[package]
authors = ["Henrik Alsér <henrik.alser@me.com>"]
name = "nrf-embassy"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7.1"
defmt = {version = "0.3", features = ["alloc"]}
# defmt-rtt = "0.3"
embassy = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.0", features = ["defmt"] }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.0", features = ["defmt", "time-driver-rtc1", "gpiote"] }
embedded-hal = "0.2.6"
futures = { version = "0.3.19", default-features = false, features = ["async-await"] }
heapless = "0.7.8"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
st7735-embassy = {branch = "main", git = "https://github.com/kalkyl/st7735-embassy.git"}
embedded-graphics = "0.7.1"
nrf-softdevice = { version = "0.1.0", git = "https://github.com/embassy-rs/nrf-softdevice.git", features = ["defmt", "nrf52840", "s140", "ble-peripheral", "ble-central", "critical-section-impl"]}
nrf-softdevice-s140 = { version = "0.1.1", git = "https://github.com/embassy-rs/nrf-softdevice.git"}
nrf-softdevice-defmt-rtt = { git = "https://github.com/embassy-rs/nrf-softdevice.git", version = "0.1.0"}
alloc-cortex-m = "0.4.2"
fixed = "1.11.0"

[features]
# set logging levels here
default = ["embassy-nrf/nrf52840"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-


[patch.crates-io]
embassy = { git = "https://github.com/embassy-rs/embassy" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy" }
embassy-macros = { git = "https://github.com/embassy-rs/embassy" }
embassy-traits = { git = "https://github.com/embassy-rs/embassy" }

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }

[workspace]